@@ -22,7 +22,7 @@
 
     <string id="31001">DR1</string>
     <string id="31002">DR2</string>
-    <string id="31003">DR Update</string>
+    <string id="31003">DR Ultra</string>
     <string id="31004">DR K</string>
     <string id="31005">DR Ramasjang</string>
     <string id="31006">DR3</string>
