@@ -1,3 +1,7 @@
+[B]Version 2.1.10 - 2013-03-22[/B]
+- Added DR Ultra
+- Removed DR Update
+
 [B]Version 2.1.9 - 2013-01-30[/B]
 - Renamed DR HD to DR3
 - Minor fixes to channel logos
